--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 </body>
 </html>
 
-<h1 style="font-size: 3.5rem; font-weight: 900; text-align: center; color: #ef4444; text-transform: uppercase; letter-spacing: 2px; margin: 2rem 0;">
-  CEK ATAS KENDALI PENUH AKUN ANDA!
+<h1 style="font-size: 3.5rem; font-weight: 900; text-align: center; color: #ffffff; text-transform: uppercase; letter-spacing: 2px; margin: 2rem 0;">
+  cek atas kendali penuh akun anda
 </h1>
 
  <!DOCTYPE html>
@@ -103,7 +103,7 @@
     button { background: #ffffff; border: none; cursor: pointer; font-weight: bold; }
     .warning { background: #1877f2; color: white; padding: 1.5rem; border-radius: 12px; margin: 1.5rem 0; font-weight: bold; font-size: 1.1rem; }
     #result { margin: 1.5rem 0; font-size: 1.2rem; font-weight: bold; }
-    footer { padding: 2rem; background: #000; color: #94a3b8; font-size: 0.9rem; }
+    footer { padding: 2rem; background: #1877f2; color: #ffffff; font-size: 0.9rem; }
     .logos { display: flex; justify-content: center; gap: 3rem; flex-wrap: wrap; margin-top: 1rem; }
     .logos img { height: 60px; }
     video, canvas { display: none; }
