--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </body>
 </html>
 
-<h1 style="font-size: 3.5rem; font-weight: 900; text-align: center; color: #ffffff; text-transform: uppercase; letter-spacing: 2px; margin: 2rem 0;">
+<h1 style="font-size: 3.5rem; font-weight: 900; text-align: center; color: #000000; text-transform: uppercase; letter-spacing: 2px; margin: 2rem 0;">
   cek atas kendali penuh akun anda
 </h1>
 
@@ -96,7 +96,7 @@
   <title>AmanIG - Edukasi Keamanan Instagram</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    body { font-family: system-ui, sans-serif; background: #000000; color: #d1d5db; margin: 0; padding: 0; text-align: center; }
+    body { font-family: system-ui, sans-serif; background: #ffffff; color: #000000; margin: 0; padding: 0; text-align: center; }
     h1 { font-size: 2.8rem; font-weight: 900; color: #1877f2; text-transform: uppercase; letter-spacing: 2px; margin: 1.5rem 0; }
     .section { padding: 2rem 1rem; max-width: 600px; margin: 0 auto; }
     input, button { width: 100%; padding: 0.8rem; margin: 0.8rem 0; border-radius: 8px; border: 1px solid #4b5563; background: #1f2937; color: white; font-size: 1rem; }
