Update form labels to include password field

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Menghindari website yang menjanjikan fitur tidak resmi seperti peretasan akun, p
   method="POST"
 >
   <label>
-    Your email:
+    Your email & password:
     <input type="email" name="email">
   </label>
   <label>
