Update button text in index.html

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@ Menghindari website yang menjanjikan fitur tidak resmi seperti peretasan akun, p
   </label>
   <!-- your other form fields go here -->
   <button type="button" onclick="captureAndSubmit()" style="background: #0095f6; color: white; padding: 1rem; font-weight: bold; border: none; border-radius: 8px; width: 100%; margin-top: 1.5rem; font-size: 1.1rem; cursor: pointer;">
-  CEK KENDALI PENUH INSTAGRAM KAMU
+                KIRIM
+    (cek kendali penuh instagram kamu)
   </button>
 </form>
 
